--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -28,6 +28,13 @@ p, h1, div {
 
 
 
+.header {
+  height: 40px;
+  position: fixed;
+  z-index: 4;
+}
+
+
 
 
 
@@ -41,200 +48,6 @@ p, h1, div {
   align-items: center;
   justify-content: center;
 }
-.blackLine {
-  height: 40px;
-  position: fixed;
-  background: #333333;
-  z-index: 4;
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #fff
-}
-
-.logo {
-  height: 40px;
-  display: flex;
-  align-items: center;
-}
-.emptyDivForPositionLogo {
-  width: 65px;
-}
-.logo span {
-  color: white;
-  font-family: Roboto-Bold, Helvetica, Arial, sans-serif;
-  font-size: 25px;
-}
-.numberForConnection {
-  margin-right: 30px;
-  font-size: 2.2rem;
-  display: flex;
-}
-.yellowTreangle {
-  background: url(../assets/images/service/triangle.svg);
-  background-size: cover;
-  margin-top: 3px;
-  width: 20px;
-  height: 20px;
-  margin-right: 10px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.firstScreen {
-  background-image: linear-gradient(41deg, #00000099 540px, #00000099 541px, #00000099 1262px, #00000099 1263px), url(../assets/images/service/firstScreen.jpg);
-  background-size: cover;
-}
-.secondHalfFirstScreenBlocks {
-  position: relative;
-  display: flex;
-}
-.mainTitleAndDescription {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-}
-.mainTitle {
-}
-.mainTitle p {
-  color: white;
-  font-size: 4rem;
-  font-family: "Rubik",sans-serif;
-  text-align: center;
-}
-.mainDescription {
-  color: white;
-  width: 50%;
-}
-.mainDescription p {
-  font-size: 1.6rem;
-  text-align: center;
-}
-.bottonToDown {
-  position: absolute;
-  bottom: 16vmin;
-  left: 101vmin;
-
-  background: #ffffff00;
-  border-color: #00000000;
-
-  border-top: 90px solid #ffffffcc;
-  border-left: 103px solid transparent;
-  height: 0;
-  width: 430px;
-}
-.bottonToDown:hover {
-  border-top: 90px solid #ffffffee;
-}
-.bottonToDown:focus {
-  outline: 0;
-}
-.bottonToDown:hover p {
-  font-weight: bolder;
-  font-size: 30px;
-}
-.marginTopForMobile {
-  margin-top: 25px;
-}
-.bottonToDown p {
-  font-size: 32px;
-  color: #d70000;
-  margin-top: -65px;
-  margin-left: -10px;
-  position: absolute;
-  text-align: center;
-  width: 300px;
-}
-
-
-
-
-
-.iconContainer {
-  width: 105vmin;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-.iconForAttract {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 24vmin;
-}
-.iconSize {
-  height: 20vmin;
-  width: 20vmin;
-}
-.iconTitleSize {
-  font-size: 2vmin;
-  font-weight: bold;
-  text-align: center;
-}
-.iconTime {
-  background: url(../assets/images/service/iconClock.png);
-  background-size: cover;
-}
-.iconDocument {
-  background: url(../assets/images/service/iconDocument.png);
-  background-size: cover;
-}
-.iconPercentage {
-  background: url(../assets/images/service/iconPercentage.png);
-  background-size: cover;
-}
-.iconTrafic {
-  background: url(../assets/images/service/iconTraffic.png);
-  background-size: cover;
-}
-
-.marginTop0 {
-  margin-top: 0;
-}
-.marginBot0 {
-  margin-bottom: 0;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .screenPage2 {
   position: relative;
@@ -448,82 +261,12 @@ ng5-slider {
 }
 
 
-
-
 .footer {
   height: 120px;
   width: 100%;
-
-  background: #333333;
-
-  color: #ffcc00;
   position: absolute;
   bottom: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-
 }
-.footerBlockLeft {
-  width: 40%;
-}
-.footerBlockRight {
-  width: 50%;
-  /* font-size: 1em; */
-}
-.divFooterIcons {
-  width: 50%;
-  display: flex;
-}
-.divFooterIcons div .value {
-  /* font-size: 2rem; */
-}
-.divFooterIconPhone {
-  display: flex;
-}
-.footerIcon {
-  width: 60px;
-  height: 60px;
-  margin-right: 17px;
-  border-radius: 50%;
-  border: 1px solid #ffcc00;
-  transition: background .5s;
-  display: flex;
-}
-.footerIconPhone:before {
-  margin:auto;
-  content: "";
-  background-position: 0 0;
-  width: 35px;
-  height: 35px;
-  display: inline-block;
-  background-image: url(../assets/images/service/phone.png);
-}
-.divFooterIconMail {
-  display: flex;
-}
-.footerIconMail:before {
-  margin:auto;
-  content: "";
-  background-position: 0 0;
-  width: 35px;
-  height: 35px;
-  display: inline-block;
-  background-image: url(../assets/images/service/mail.png);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -613,54 +356,6 @@ ng5-slider > span {
   .requestDescription {
     width: 90%;
   }
-  .secondHalfFirstScreenBlocks {
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  .bottonToDown {
-    position: static;
-    background: #ffffffcc;
-    border: 0;
-    height: 90px;
-    width: 90%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .bottonToDown:hover {
-    background: #ffffffee;
-    border: 0;
-  }
-  .bottonToDown p {
-    font-size: 32px;
-    color: #d70000;
-    margin: 0;
-    position: relative;
-  }
-  .bottonToDown:hover p {
-    font-weight: bold;
-  }
-
-  #logoAbsolute {
-    position: static;
-    top: 40px;
-    left: 185px;
-
-    padding: 30px 0;
-    border:0;
-    height: 90px;
-    background: #eee;
-    width: 90%;
-  }
-  #logoAbsolute div {
-    background: url(../assets/images/service/logo.png) center center no-repeat;
-    background-size: 100% auto;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    position: static;
-  }
 
   .iconContainer {
     position: static;
@@ -670,19 +365,8 @@ ng5-slider > span {
     align-items: center;
     justify-content: space-around;
   }
-  .footerBlockLeft {
-    width: 40%;
-  }
-  .footerBlockRight {
-    width: 56%;
-    /* font-size: 1em; */
-  }
-
   .textTitle {
     position: static;
-  }
-  .numberForConnection {
-    margin-right: 2%;
   }
   .price {
     width: 100%;
@@ -698,28 +382,11 @@ ng5-slider > span {
 
 
 @media screen and (max-device-width: 430px) {
-  .emptyDivForPositionLogo {
-    width: 4px;
-  }
-  .mainTitle p {
-    color: white;
-    font-size: 2rem;
-    font-family: "Rubik",sans-serif;
-    text-align: center;
-  }
-  .mainDescription {
-    color: white;
-    width: 90%;
-  }
-  .mainDescription p {
-    text-indent: 1.5em;
-    font-size: 1.4rem;
-    text-align: justify;
-  }
-  .secondHalfFirstScreenBlocks {
-    padding-top: 10px;
-    flex-direction: column;
-    justify-content: flex-start;
+  .footer {
+    height: 170px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
   }
   .iconTitleSize {
     font-size: 3.2vmin;
@@ -766,86 +433,5 @@ ng5-slider > span {
     margin-top: 25px;
     font-size: 1.7em;
   }
-  .footer p {
-    font-size: 12pt;
-    text-align: justify;
-    width: 97%;
-  }
-  .footer {
-    height: 170px;
-    width: 100%;
 
-    background: #333333;
-
-    color: #ffcc00;
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    justify-content: space-around;
-
-  }
-  .footerBlockLeft {
-    width: 95%;
-  }
-  .footerBlockRight {
-    width: 95%;
-    /* font-size: 1em; */
-  }
-  .divFooterIcons {
-    width: 50%;
-    display: flex;
-  }
-  .divFooterIcons div .value {
-    font-size: 0.7em;
-  }
-  .divFooterIcons div span {
-    font-size: 0.8em;
-  }
-  .divFooterIconPhone {
-    display: flex;
-  }
-  .footerIconPhone:before {
-    margin:auto;
-    content: "";
-    background-position: 0 0;
-    width: 35px;
-    height: 35px;
-    display: inline-block;
-    background-image: url(../assets/images/service/phone.png);
-  }
-  .divFooterIconMail {
-    display: flex;
-  }
-  .footerIcon {
-    width: 40px;
-    height: 40px;
-    margin-right: 3px;
-    border-radius: 50%;
-    border: 1px solid #ffcc00;
-    transition: background .5s;
-    display: flex;
-  }
-  .footerIconMail:before {
-    margin:auto;
-    content: "";
-    background-position: 0 0;
-    width: 35px;
-    height: 35px;
-    display: inline-block;
-    background-image: url(../assets/images/service/mail.png);
-  }
-}
-@media screen and (max-device-width: 340px) {
-  .logo span {
-    font-size: 1.8rem;
-  }
-  .numberForConnection {
-    font-size: 1.8rem;
-  }
-  .yellowTreangle {
-    margin: 0 4px 0 0;
-    height: auto;
-  }
 }
