--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -36,7 +36,7 @@
   margin-right: 10px;
 }
 
-@media screen and (max-device-width: 824px) {
+@media screen and (max-width: 824px) {
   .numberForConnection {
     margin-right: 5%;
   }
@@ -49,7 +49,7 @@
   }
 }
 
-@media screen and (max-device-width: 340px) {
+@media screen and (max-width: 390px) {
   .logo span {
     font-size: 1.8rem;
   }
