--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,101 +15,17 @@
 <!-- Olf Screens -->
 
 <!--  Second screen -->
-<div [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight">
-<div [style]="secondScreenStyle">
-<div class="screenPage2" [style.minWidth.px] = "clientWidth" [style.minHeight.px] = "clientHeight">
-  <h1 class="page2Title">ПОДБЕРИТЕ ИНДИВИДУАЛЬНЫЙ ВАРИАНТ ФИНАНСИРОВАНИЯ</h1>
-  <div class="choiseAutoType">
-    <p>Введите стоимость автомобиля:</p>
-    <mat-form-field class="price">
-      <input matInput placeholder="" [(ngModel)] = "price" name="price">
-    </mat-form-field>
-  </div>
+<app-credit-lising-calculator [minwidth]="clientWidth"
+                              [minheight]="clientHeight"
+                              (getPriceValue)="setPrice($event)"
+                              (getFirstPaymentValue)="setFirstPayment($event)"
+                              (getPeriodValue)="setPeriod($event)"
+                              (getRateValue)="setRate($event)"
+                              (getPlTValue)="setPLT($event)"
+                              (getCreditOrLisingValue)="setCreditOrLising($event)"
+                              >
 
-  <div class="slidersAndBestChoise">
-    <mat-card class="slidersBlock">
-
-      <!-- START CREDIT-LISING; USD-BYR SLIDERS -->
-      <div *ngIf="selectedFace == 'F'">
-        <div class="booleanSliderLables">
-          <span>Кредит</span>
-          <span>Лизинг</span>
-        </div>
-        <ng5-slider [(value)]="creditLisingValue"  [options]="creditLisingOptions"></ng5-slider>
-        <!-- (valueChange)="isChangedCreditLising()" -->
-      </div>
-      <!-- END CREDIT-LISING; USD-BYR SLIDERS -->
-
-
-      <h2 class="titlesWithValues">
-        Первый платёж: {{getFirstPayment()}}
-      </h2>
-      <div class="divForSlider">
-
-        <div class="divSliderContainer">
-          <ng5-slider *ngIf="creditLisingValue === 0" [(value)]="firstPaymentPercentageValue" [options]="firstPaymentPercentageOptions"></ng5-slider>
-          <ng5-slider *ngIf="creditLisingValue === 1" [(value)]="lisingFirstPaymentPercentageValue" [options]="lisingFirstPaymentPercentageOptions"></ng5-slider>
-        </div>
-
-
-        <div  matTooltip="Текст подсказки про бегунок c процентом первого платежа"
-              matTooltipPosition="above"
-              matTooltipHideDelay="1000"
-              matTooltipClass="toolTipText"
-              class="toolTip">
-          ?
-        </div>
-      </div>
-
-      <div class="firstRepaymentValues">
-        <span *ngFor="let persentage of creditFirstPaymentPercentageValues">{{persentage}}</span>
-      </div>
-
-      <h2 class="marginTopForMobile">
-        Срок: {{getPeriod()}}
-      </h2>
-
-      <div class="divForSlider">
-          <div class="divSliderContainer">
-            <ng5-slider *ngIf="creditLisingValue === 0 else lisingRepaymentPeriodSlider" [(value)]="repaymentPeriodValue" [options]="repaymentPeriodOptions"></ng5-slider>
-            <ng-template #lisingRepaymentPeriodSlider>
-              <ng5-slider [(value)]="lisingRepaymentPeriodValue" [options]="lisingRepaymentPeriodOptions"></ng5-slider>
-            </ng-template>
-          </div>
-        <div  matTooltip="Текст подсказки про бегунок с периодом"
-              matTooltipPosition="above"
-              matTooltipHideDelay="1000"
-              matTooltipClass="toolTipText"
-              class="toolTip">
-          ?
-        </div>
-      </div>
-      <div style="height: 40px;"></div>
-    </mat-card>
-
-    <mat-card class="slidersBlock">
-      <div class="slidersRightBlock">
-        <!-- <h3>Лучший выбор:</h3>
-        <img [src]="link" class="image"> -->
-        <h3>Процентная ставка:</h3>
-        <h2 class="values">{{(calculateRate() * 100).toFixed(2)}} %</h2>
-        <h3>Ежемесячный платёж:</h3>
-        <h2 class="values">{{getPLT().toFixed(2)}} BYN</h2>
-        <!--
-        <div>Выгода:</div>
-        <div>{{getExtraPayment()}}</div>
-        -->
-      </div>
-    </mat-card>
-  </div>
-
-  <button mat-raised-button class="aboutConditions" (click)="scrollToThirdPage()" color="primary" >Подробнее об условиях</button>
-</div>
-</div>
-</div>
-
-
-
+</app-credit-lising-calculator>
 
 <!-- Third screen -->
 <app-installment-plan [minwidth]="clientWidth" [minheight]="clientHeight">
@@ -119,11 +35,11 @@
 </app-how-submit>
 
 <app-request [price]="price"
-             [firstPayment]="getFirstPayment()"
-             [period]="getPeriod()"
-             [rate]="calculateRate()"
-             [plt]="getPLT()"
-             [creditLisingValue]="creditLisingValue"
+             [firstPayment]="firstPayment"
+             [period]="period"
+             [rate]="rate"
+             [plt]="plt"
+             [creditLisingValue]="ceditOrLising"
              [minwidth]="clientWidth"
              [minheight]="clientHeight">
 </app-request>
