--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,18 @@
-<p>
-  home works!
-</p>
+<app-first-page [minwidth]="minwidth" [minheight]="minheight">
+</app-first-page>
+
+<app-credit-lising-difference [minwidth]="minwidth" [minheight]="minheight">
+</app-credit-lising-difference>
+
+<app-credit-lising-calculator [minwidth]="clientWidth" [minheight]="minheight">
+
+</app-credit-lising-calculator>
+
+<app-installment-plan [minwidth]="minwidth" [minheight]="minheight">
+</app-installment-plan>
+
+<app-how-submit [minwidth]="minwidth" [minheight]="minheight">
+</app-how-submit>
+
+<app-request [minwidth]="minwidth" [minheight]="minheight">
+</app-request>
