--- a/src/app/home/pages/credit-lising-calculator/credit-lising-calculator.component.html
+++ b/src/app/home/pages/credit-lising-calculator/credit-lising-calculator.component.html
@@ -91,7 +91,8 @@
     </mat-card>
   </div>
 
-  <button mat-raised-button class="aboutConditions" (click)="scrollToThirdPage()" color="primary" >Подробнее об условиях</button>
+  <button mat-raised-button class="aboutConditions"  color="primary" >Подробнее об условиях</button>
+  <!-- (click)="scrollToThirdPage()" -->
 </div>
 </div>
 </div>
