--- a/src/app/home/pages/first-page/first-page.component.html
+++ b/src/app/home/pages/first-page/first-page.component.html
@@ -41,7 +41,8 @@
           <p class="iconTitleSize">Любой автомобиль</p>
         </div>
       </div>
-      <button class="bottonToDown" (click)="scrollToSecondPage()"><p>Подобрать условия</p></button>
+      <button class="bottonToDown" ><p>Подобрать условия</p></button>
+      <!-- (click)="scrollToSecondPage()" -->
     </div>
     </div>
     </div>
