--- a/src/app/home/pages/how-submit/how-submit.component.html
+++ b/src/app/home/pages/how-submit/how-submit.component.html
@@ -1,7 +1,7 @@
 <div>
   <!-- [style]="cornerYellowLine" -->
     <div style="display: flex; justify-content: center; align-items: center;" [style.minWidth.px] = "minwidth" [style.minHeight.px] ="minheight">
-      <div class="container parentFlexColumn borderBlack">
+      <div class="container parentFlexColumn">
         <h3>КАК ОФОРМИТЬ КРЕДИТ/РАССРОЧКУ НА АВТО?</h3>
         <div class="stepsToGetting">
           <div class="step">
@@ -29,7 +29,7 @@
             <p>Получите автомобиль</p>
           </div>
         </div>
-        <h3>НАШИ ПРЕИМУЩЕСТВА:</h3>
+        <h3 style="margin-top: 40px;">НАШИ ПРЕИМУЩЕСТВА:</h3>
         <div class="ourAdvantages">
           <div class="advantage step">
             <div class="advantage1Image imageSize"></div>
