--- a/src/app/home/pages/installment-plan/installment-plan.component.html
+++ b/src/app/home/pages/installment-plan/installment-plan.component.html
@@ -2,8 +2,8 @@
   <!-- [style]="cornerYellowLine" -->
     <div style="display: flex; justify-content: center; align-items: center;" [style.minWidth.px] = "minwidth" [style.minHeight.px] ="minheight">
       <div class="container parentFlexColumn borderBlack">
-        <div class="title"><h3 style="margin-bottom:0; margin-top:4px;">РАССРОЧКА</h3></div>
-        <div class="title"><p>на покупку автомобиля</p></div>
+        <div class="title"><h3 style="margin-bottom:7px; margin-top:4px; font-size: 3rem; font-weight: 600;">РАССРОЧКА</h3></div>
+        <div class="title"><p style="margin-bottom: 30px;">на покупку автомобиля</p></div>
         <div class="title"><h3>ОСНОВНЫЕ УСЛОВИЯ:</h3></div>
         <div class="content parentFlexColumn">
           <div class="conditions">
