--- a/src/app/home/pages/credit-lising-difference/credit-lising-difference.component.css
+++ b/src/app/home/pages/credit-lising-difference/credit-lising-difference.component.css
@@ -8,12 +8,9 @@ p {
   justify-content: center;
   align-items: center;
 }
-.borderBlack {
+.border {
   border: 1px solid #e6e6e6;
   border-radius: 6px;
-}
-.borderGreen {
-  border: green solid 2px;
 }
 .flexContentBetween {
   display: flex;
@@ -26,31 +23,37 @@ p {
 }
 
 .container {
-  margin: 5%;
-  width: 95%;
-  height: 95%;
+  margin: 0%;
+  width: 100%;
+  height: 100%;
 }
 .title {
   width: 100%;
   text-align: center;
 }
+.title span {
+  font-size: 2.4rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+}
 .content {
-  border-bottom: black solid 2px;
-  border-left: black solid 2px;
-  border-right: black solid 2px;
   width: 100%;
 }
 .creditDescriptionBlock {
   width:45%;
+  padding: 10px;
 }
 .creditDescriptionBlock p {
   width: 95%;
+  margin-bottom: 10px;
 }
 .lisingDescriptionBlock {
   width:45%;
+  padding: 10px;
 }
 .lisingDescriptionBlock p {
   width: 95%;
+  margin-bottom: 10px;
 }
 
 
@@ -78,6 +81,7 @@ p {
   width: auto;
 }
 .secondBlockAdvantages {
+  position: relative;
   display: flex;
   width: 50%;
 }
@@ -86,6 +90,7 @@ p {
   background-size: cover;
 }
 .thirdBlockAdvantages {
+  position: relative;
   display: flex;
   width: 50%;
 }
@@ -97,10 +102,30 @@ p {
   width: 100%;
 }
 .fourthBlockAdvantages {
+  position: relative;
   display: flex;
   width: 50%;
 }
 .imageHowSpeed {
   background-image: url(../../../../assets/images/service/advantagesPage/howspeed.png);
   background-size: cover;
+}
+
+.borderLeft::before, .borderTop::after {
+  position: absolute;
+  content: '';
+}
+.borderLeft::before {
+  top: 7px;
+  bottom: 7px;
+  left: 0px;
+  border-left: 1px solid #e6e6e6;
+  width: 1px;
+}
+.borderTop::after {
+  top: 0;
+  height: 1px;
+  left: 17px;
+  right: 17px;
+  border-top: 1px solid #e6e6e6;
 }
