--- a/src/app/home/pages/how-submit/how-submit.component.css
+++ b/src/app/home/pages/how-submit/how-submit.component.css
@@ -8,9 +8,6 @@ p {
   justify-content: center;
   align-items: center;
 }
-.borderBlack {
-  border: black solid 2px;
-}
 .flexContentBetween {
   display: flex;
   justify-content: space-between;
@@ -21,12 +18,9 @@ p {
   text-align: center;
 }
 .container {
-  margin: 5%;
-  width: 95%;
-  height: 95%;
-  padding-bottom: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
+  width: 100%;
+  height: 100%;
+  padding: 30px;
 }
 .stepsToGetting {
   display: flex;
